# PsyscaleDB

./: .gitignore  CHANGELOG.md  CONTRIBUTIONS.md  LICENSE  README.md  pyproject.toml
.github/: FUNDING.yml
docs/: class_hierarchy.md  relationship_diagram.md  table_definitions.md
examples/: configure_db.py  example_env.txt  import_data.py  import_symbols.py
examples/broker_apis/: __init__.py  alpaca_api.py
psyscale/: __init__.py  async_core.py  client.py  core.py  dev.py  manager.py  metadata_partial.py  series_data_partial.py  series_df.py  symbols_partial.py  timescale.yml  timeseries_config_partial.py  timeseries_partial.py
psyscale.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
psyscale/psql/: __init__.py  commands_obj.py  enum.py  generic.py  orm.py  security.py  timeseries.py
pycharts_timescaledb/: __init__.py  api.py  api_extention.py  orm.py  series_df.py  sql_cmds.py  timescale.yml
pycharts_timescaledb.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pycharts_timescaledb/psql/: enum.py  generic.py  orm.py  timeseries.py
scripts/: configure_db.py  example_env.txt  import_data.py  import_symbols.py
scripts/broker_apis/: alpaca_api.py
tests/: .coverage  _insert_speed.py  conftest.py  test_asset_table.py  test_async_data_insert.py  test_async_symbols_and_data copy.py  test_client_init.py  test_commands_obj.py  test_conn_params.py  test_data_table.py  test_generic_cmds.py  test_series_df.py  test_symbols_table.py  test_timeseries_config.py
tests/example_data/: AAPL_1min.csv  example_ticks.csv  spy_data.csv
