[project]
name = "psyscale"
version = "0.0.0"
description = "A simple Python library for storing & retrieving financial data in a TimescaleDB optimized Postgres Database."
readme = { file = "README.md", content-type = "text/markdown" }
authors = [{ name = "jack_of_some_trades" }]
license = { text = "TBD" }
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2.2",
    "pandas-market-calendars>=5.0.0",
    "psycopg[binary,pool]>=3.2.6",
    "python-dotenv>=1.0.1",
]

[tool.setuptools]
packages = ["psyscale"]

[dependency-groups]
dev = [
    "alpaca-py>=0.39.4",
    "pytest>=8.3.5",
    "testcontainers>=4.10.0",
]
